add: update tag of iam user

--- a/user_tags.sample.yml
+++ b/user_tags.sample.yml
@@ -1,5 +1,5 @@
-users:
-  John Smith:
-    tags:
-      - key: nickname
-        value: John
+Users:
+  - Name: JohnSmith
+    Tags:
+      - Key: nickname
+        Value: John
